<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C3C3C"
    tools:context=".screen.home.HomeFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="217dp"
        android:layout_height="201dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="13dp"
        android:src="@drawable/icon_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_logo_home"
        android:textColor="#FFFFFF "
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHomePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:backgroundTint="#272727"
        android:text="@string/txt_btn_home_photo"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:cornerRadius="40dp"
        app:icon="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHomeWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#272727"
        android:text="@string/txt_home_weather_btn"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:cornerRadius="40dp"
        app:icon="@drawable/ic_weather_ico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHomePhoto" />


</androidx.constraintlayout.widget.ConstraintLayout>


