<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".screen.register.RegisterFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNavigationRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#272727"
        android:clickable="true"
        android:src="@drawable/ic_baseline_navigate_before_24"
        app:backgroundTint="#4F4F4F"
        app:borderWidth="1dp"
        app:fabSize="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#0BC263"
        />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="76dp"
        android:text="@string/register_text_title"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabNavigationRegister" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/OutlinedRoundedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="24dp"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="#0BC263"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_mail_hint"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passLayout"
        style="@style/OutlinedRoundedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="#0BC263"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_pass1_hint"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/OutlinedRoundedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="#0BC263"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPass2Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_pass2_hint"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#037238"
        android:paddingStart="40dp"
        android:paddingTop="15dp"
        android:paddingEnd="40dp"
        android:paddingBottom="15dp"
        android:text="@string/register_btn_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="78dp"
        android:layout_height="71dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />


</androidx.constraintlayout.widget.ConstraintLayout>