<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".screen.soilInfo.SoilInfoFragment">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabInfoNavigate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#037238"
        android:clickable="true"
        android:src="@drawable/ic_baseline_navigate_before_24"
        app:backgroundTint="#4F4F4F"
        app:borderWidth="1dp"
        app:fabSize="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/info_text_title"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabInfoNavigate" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layouttPhSoil"
        style="@style/OutlinedRoundedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="32dp"
        app:boxBackgroundColor="#0BC263"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPhSoil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none|numberDecimal"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="82dp"
        android:text="@string/info_ph_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="75dp"
        android:text="@string/info_pot_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPotSoil"
        style="@style/OutlinedRoundedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:boxBackgroundColor="#0BC263"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/layouttPhSoil">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPotSoil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none|numberDecimal"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="70dp"
        android:text="@string/info_nitrogen_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNitSoil"
        style="@style/OutlinedRoundedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:boxBackgroundColor="#0BC263"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/layoutPotSoil"
        app:layout_constraintTop_toBottomOf="@+id/layoutPotSoil">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNitSoi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none|numberDecimal"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:text="@string/info_pos_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutFosSoil"
        style="@style/OutlinedRoundedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:boxBackgroundColor="#0BC263"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/layoutNitSoil"
        app:layout_constraintTop_toBottomOf="@+id/layoutNitSoil">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editFosSoil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none|numberDecimal"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSoilInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="#037238"
        android:text="@string/info_btn_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutFosSoil" />

    <ProgressBar
        android:id="@+id/progressBarIInfo"
        style="?android:attr/progressBarStyle"
        android:layout_width="73dp"
        android:layout_height="75dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>